config/admission.yaml
apiVersion: v1
kind: Service
metadata:
  name: admission
  namespace: system
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    logging.kubesphere.io/logsidecar-injector: $(INJECTOR_DEPLOY_NAME)
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: admission-mutate
webhooks:
  - admissionReviewVersions:
      - v1beta1
    name: logsidecar-injector.logging.kubesphere.io
    failurePolicy: Fail
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    clientConfig:
      service:
        namespace: $(ADMISSION_SERVICE_NAMESPACE)
        name: $(ADMISSION_SERVICE_NAME)
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURmekNDQW1lZ0F3SUJBZ0lVTE5JRUV5K2crcm4vaG9YQzdacmZCcXowUDJZd0RRWUpLb1pJaHZjTkFRRUwKQlFBd1R6RUxNQWtHQTFVRUJoTUNRMDR4Q3pBSkJnTlZCQWdNQWtoQ01Rc3dDUVlEVlFRS0RBSlJRekVtTUNRRwpBMVVFQXd3ZGJHOW5jMmxrWldOaGNpMXBibXBsWTNSdmNpMWhaRzFwYzNOcGIyNHdIaGNOTWpFeE1UQXhNVEUxCk16QTNXaGNOTXpFeE1ETXdNVEUxTXpBM1dqQlBNUXN3Q1FZRFZRUUdFd0pEVGpFTE1Ba0dBMVVFQ0F3Q1NFSXgKQ3pBSkJnTlZCQW9NQWxGRE1TWXdKQVlEVlFRRERCMXNiMmR6YVdSbFkyRnlMV2x1YW1WamRHOXlMV0ZrYldsegpjMmx2YmpDQ0FT [...]
    namespaceSelector:
      matchExpressions:
      - key: logging.kubesphere.io/logsidecar-injection
        operator: In
        values:
        - enabled
    objectSelector:
      matchExpressions:
      - key: logging.kubesphere.io/logsidecar-injector
        operator: DoesNotExist
    sideEffects: None
